--- a/index.html
+++ b/index.html
@@ -6,10 +6,33 @@
 </head>
  <body>
   <div class="grid">
-     <div class="header">header</div>
-     <div class="nav">nav</div>
-     <div class="main">main</div>
-     <div class="footer">footer</div>
+    <header>
+      <h1>Lets travel the World!</h1></header>
+    <h3>Its the Journey AND the Destination.</h3>
+ <nav>
+   <ul>
+    <a href="index.html">Home</a>
+    <a href="blog.html">Destination</a>
+    <a href="special.html">Special</a>
+    <a href="travel.html">Travel Blogs</a>
+    <a href="contact.html">Contact Us</a>
+   </ul>
+  </nav>
+     <main>
+       <h2>Welcome to Let's Travel The World!</h2>
+       <p>By traveling - both within the USA and abroad - we expand our horizons and gain a greater appreciation of the world we live in.
+
+Experiencing other cultures, including new food, languages, and customs, challenges us and makes us better understand our own culture.
+
+We are a full service travel agency. As seasoned travelers ourselves, we know what we're talking about and can draw upon our own experiences when putting together a great adventure for you and your family.
+
+Once you've enjoyed a couple of great trips, you might just "catch the bug" like we did and start planning two or three trips ahead! Maybe you'll even put a big world map up on your wall at home and get out the color pushpins...
+
+         So contact us today and let's start planning your next amazing trip!</p>
+    </main>
+     <footer>
+        
+     </footer>
   </div>
 </body>
 </html>
