--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-   <title>Basic Grid</title>
+   <title>Travel the World</title>
    <link rel="stylesheet" type="text/css" href="style.css"> 
 </head>
  <body>
@@ -31,7 +31,9 @@ Once you've enjoyed a couple of great trips, you might just "catch the bug" like
          So contact us today and let's start planning your next amazing trip!</p>
     </main>
      <footer>
-        
+       <p>&copy; Travel the World LLC</p>
+       <p>123 Main Street</p>
+       <p>Sometown,USA 12345
      </footer>
   </div>
 </body>
