--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
 </head>
  <body>
   <div class="grid">
-    <header>
+ <header>
       <h1>Lets travel the World!</h1></header>
     <h3>Its the Journey AND the Destination.</h3>
+ <header>
  <nav>
    <ul>
     <a href="index.html">Home</a>
-    <a href="blog.html">Destination</a>
+    <a href="destination.html">Destination</a>
     <a href="special.html">Special</a>
-    <a href="travel.html">Travel Blogs</a>
+    <a href="blog.html">Travel Blogs</a>
     <a href="contact.html">Contact Us</a>
    </ul>
   </nav>
