--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
    <link rel="stylesheet" type="text/css" href="style.css"> 
 </head>
  <body>
-  <div class="grid">
+ <div class="grid">
  <header>
       <h1>Lets travel the World!</h1></header>
     <h3>Its the Journey AND the Destination.</h3>
- <header>
+ </header>
  <nav>
    <ul>
-    <a href="index.html">Home</a>
-    <a href="destination.html">Destination</a>
-    <a href="special.html">Special</a>
-    <a href="blog.html">Travel Blogs</a>
-    <a href="contact.html">Contact Us</a>
+     <li><a href="index.html">Home</a></li>
+     <li><a href="destination.html">Destination</a></li>
+     <li><a href="special.html">Special</a></li>
+     <li><a href="blog.html">Travel Blogs</a></li>
+     <li><a href="contact.html">Contact Us</a></li>
    </ul>
   </nav>
      <main>
@@ -34,7 +34,7 @@ Once you've enjoyed a couple of great trips, you might just "catch the bug" like
      <footer>
        <p>&copy; Travel the World LLC</p>
        <p>123 Main Street</p>
-       <p>Sometown,USA 12345
+       <p>Sometown,USA 12345</p>
      </footer>
   </div>
 </body>
