--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <body>
  <div class="grid">
  <header>
-      <h1>Lets travel the World!</h1></header>
+    <h1>Lets travel the World!</h1>
     <h3>Its the Journey AND the Destination.</h3>
  </header>
  <nav>
@@ -22,14 +22,19 @@
      <main>
        <h2>Welcome to Let's Travel The World!</h2>
        <p>By traveling - both within the USA and abroad - we expand our horizons and gain a greater appreciation of the world we live in.
-
+<br>
+<br>
 Experiencing other cultures, including new food, languages, and customs, challenges us and makes us better understand our own culture.
-
+<br>
+<br>
 We are a full service travel agency. As seasoned travelers ourselves, we know what we're talking about and can draw upon our own experiences when putting together a great adventure for you and your family.
-
+<br>
+<br>
 Once you've enjoyed a couple of great trips, you might just "catch the bug" like we did and start planning two or three trips ahead! Maybe you'll even put a big world map up on your wall at home and get out the color pushpins...
-
+<br>
+<br>
          So contact us today and let's start planning your next amazing trip!</p>
+
     </main>
      <footer>
        <p>&copy; Travel the World LLC</p>
