--- a/index.html
+++ b/index.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html>
   <head>
-   <title>Travel the World</title>
-   <link rel="stylesheet" type="text/css" href="style.css"> 
+    <title>Travel the World</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="code.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="code.js"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
  <body>
- <div class="grid">
- <header>
-    <h1>Lets travel the World!</h1>
-    <h3>Its the Journey AND the Destination.</h3>
- </header>
- <nav>
-   <ul>
-     <li><a href="index.html">Home</a></li>
-     <li><a href="destination.html">Destination</a></li>
-     <li><a href="special.html">Special</a></li>
-     <li><a href="blog.html">Travel Blogs</a></li>
-     <li><a href="contact.html">Contact Us</a></li>
-   </ul>
-  </nav>
-     <main>
-       <h2>Welcome to Let's Travel The World!</h2>
-       <p>By traveling - both within the USA and abroad - we expand our horizons and gain a greater appreciation of the world we live in.
-<br>
-<br>
-Experiencing other cultures, including new food, languages, and customs, challenges us and makes us better understand our own culture.
-<br>
-<br>
-We are a full service travel agency. As seasoned travelers ourselves, we know what we're talking about and can draw upon our own experiences when putting together a great adventure for you and your family.
-<br>
-<br>
-Once you've enjoyed a couple of great trips, you might just "catch the bug" like we did and start planning two or three trips ahead! Maybe you'll even put a big world map up on your wall at home and get out the color pushpins...
-<br>
-<br>
-         So contact us today and let's start planning your next amazing trip!</p>
+  <div class="container1">
+    <header>
+        <h1>Let's Travel the World!</h1>
+        <h3>It's the Journey AND the Destination</h3>
+    </header>
+    <nav id="flex-nav">
+    <a href="#" class="toggleNav">&#9776; Menu</a> <!--This will only be visible less than 480px wide-->
+       <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="destination.html">Destination</a></li>
+        <li><a href="special.html">Special</a></li>
+        <li><a href="blog.html">Travel Blog</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+       </ul>
+    </nav>
+    <main>
+        <h2>Welcome to Let's Travel The World!</h2>
+        <p>By traveling - both within the USA and abroad - we expand our horizons and gain a greater appreciation of the world we live in.</p>
 
+        <p>Experiencing other cultures, including new food, languages, and customs, challenges us and makes us better understand our own culture.</p>
+
+        <p>We are a full service travel agency. As seasoned travelers ourselves, we know what we're talking about and can draw upon our own experiences when putting together a great adventure for you and your family.</p>
+
+        <p>Once you've enjoyed a couple of great trips, you might just "catch the bug" like we did and start planning two or three trips ahead! Maybe you'll even put a big world map up on your wall at home and get out the color pushpins...</p>
+
+        <p>So contact us today and let's start planning your next amazing trip!</p>
     </main>
-     <footer>
-       <p>&copy; Travel the World LLC</p>
-       <p>123 Main Street</p>
-       <p>Sometown,USA 12345</p>
-     </footer>
+    <footer>
+        <p> &copy; Travel The World LLC</p>
+        <p>123 Main Street</p>
+        <p>Sometown, USA 12345</p>
+    </footer>
   </div>
 </body>
 </html>
