--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
         <li><a href="contact.html">Contact Us</a></li>
        </ul>
     </nav>
+    <aside>
+	<h2>Tourism information</h2>
+         <ul>
+          <li><a href="https://www.choosechicago.com/">Chicago</a></li>
+          <li><a href="https://www.nycgo.com/">New York</a></li>
+          <li><a href="https://explorestlouis.com/">St. Louis</a></li>
+          <li><a href="http://www.sftravel.com/">San Francisco</a></li>
+          <li><a href="https://washington.org/">Washington D.C.</a></li>
+         </ul>
+     </aside>
+     
     <main>
         <h2>Welcome to Let's Travel The World!</h2>
         <p>By traveling - both within the USA and abroad - we expand our horizons and gain a greater appreciation of the world we live in.</p>
