--- a/Special.html
+++ b/Special.html
@@ -19,8 +19,8 @@
     <a href="#" class="toggleNav">&#9776; Menu</a> <!--This will only be visible less than 480px wide-->
        <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="destination.html">Destination</a></li>
-        <li><a href="special.html">Special</a></li>
+        <li><a href="Destination.html">Destination</a></li>
+        <li><a href="Special.html">Special</a></li>
         <li><a href="blog.html">Travel Blog</a></li>
         <li><a href="contact.html">Contact Us</a></li>
        </ul>
