--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="Destination.html">Destination</a></li>
         <li><a href="Special.html">Special</a></li>
         <li><a href="blog.html">Travel Blog</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="Contact.html">Contact Us</a></li>
        </ul>
     </nav>
     <aside>
