--- a/Contact.html
+++ b/Contact.html
@@ -22,41 +22,55 @@
         <li><a href="Destination.html">Destination</a></li>
         <li><a href="Special.html">Special</a></li>
         <li><a href="blog.html">Travel Blog</a></li>
-        <li><a href="Contact.html">Contact Us</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
        </ul>
     </nav>
   <main>
  <h2>Contact Us</h2>
  <p>Use this form to allow use to get in touch with you within 1 business day!</p>
  <p>*= Required Field</p>
-   <form>
-     <div class="nestedgrid2">
+   <form class="nestedgrid2">
       <div class="div1">
 	Name* <br>                                                            
         <input type="text" size="30" name="fullname"><br> 
 	Email* <br>                                            
 	<input type="Email" size="30" name="email"><br> 
 	Phone*<br>                                            
-	<input type="Tal" size="30" name="phone"><br> 
+	<input type="Tel" size="30" name="phone"><br> 
 	Personal website <br>
 	<input type="URL" size="30" name="website"><br>
       </div>
       <div class="div2">
         Next Destination<br>                   
-        <input type="text" size="30" name="fullname"><br>
+        <input type="text" size="30" list="vaca"><br>
+	<datalist id="vaca">
+  	  <option value="Beijing">
+  	  <option value="Lisbon">
+  	  <option value="Paris">
+  	  <option value="Sydney">
+  	  <option value="Tokyo">
+  	  <option value="Washington D.C.">
+	</datalist>
         Expected date of departure<br>
-	<input type="Email" size="30" name="email"><br>
+	<input type="date" size="10" name="depart"><br>
 	Number of nights on trip<br>
-	<input type="Tal" size="30" name="phone"><br>
+	<input type="number" size="5" name="night"><br>
+        <br>
+	<input type="submit" value="Help Me Book My Trip!" class="button">
        </div>
-      </div>     
      </form>
-    </section>
+        <div class="call">
+	Or Call Us
+	 <div class="phone">
+	    1-888-TRAVEL1 
+       </div>
+      </div>
   </main>
   <footer>
         <p> &copy; Travel The World LLC</p>
         <p>123 Main Street</p>
         <p>Sometown, USA 12345</p>
-	  </footer>
+    </footer>
+  </div>
 </body>
 </html>
