--- a/Contact.html
+++ b/Contact.html
@@ -60,10 +60,10 @@
 	Number of nights on trip<br>
 	<input type="number" size="5" name="night"><br>
         <br>
-	<button type="submit" size="30">Send</button>
-	</form>
+	<input type="submit" size="30" value="Help Me Book My Trip!">
+     </div>
       </div>
-     </form>
+      </form>
       <div class="call">
 	<h3>Or Call Us</h3>
 	 <div class="phone">
